[package]
name = "connect"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.27.0"
log4rs = "1.2.0"
log = "0.4.18"
anyhow = "1.0.71"
chrono = "0.4.26"
duckdb = "0.8.1"
zip_archive = "1.2.2"
zip-extract = "0.1.2"
clap = { version = "4.4.2", features = ["derive"] }
